--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # ⚙️ 공통 (Global ignores)
 # ----------------------------------------
 
-src/main/generated/
+src/main/generated/*
 
 # 모든 .env 파일 무시
 **/.env
@@ -30,6 +30,7 @@ logs/
 build/
 out/
 .gradle/
+build.gradle
 
 # IntelliJ IDEA 설정 파일
 .idea/
@@ -80,7 +81,7 @@ src/main/generated/
 # 민감한 정보가 있는 경우에만 아래처럼 로컬 전용 파일을 무시하거나, 환경변수를 사용하세요.
 application-local.properties
 application-local.yml
-# application.properties # 공통 설정 파일을 무시하고 싶다면 주석 해제
+application.properties # 공통 설정 파일을 무시하고 싶다면 주석 해제
 # application.yml # 공통 설정 파일을 무시하고 싶다면 주석 해제
 
 # ----------------------------------------
