--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ src/main/resources/static/
 # 아니면 단순히 uploads/ 등으로 명시할 수도 있습니다.
 src/main/webapp/resources/uploads/
 src/main/resources/application.properties
+src/main/resources/google.json
