--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ application-local.yml
 application.properties # 공통 설정 파일을 무시하고 싶다면 주석 해제
 # application.yml # 공통 설정 파일을 무시하고 싶다면 주석 해제
 
+#구글키 관련 민감정보
+google.json
+
 # ----------------------------------------
 # 📂 특정 경로 예외 처리
 # ----------------------------------------
